--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         <input type="search" id="search" placeholder="Search">
         <div class="region-container">
             <select name="country" id="region" class="regionSelect">
-                <option id="chooseOption">Please choose an option</option>
+                <option id="chooseOption" value="all">Please choose an option</option>
                 <option value="Africa" class="regionSelectOptions">
                     Africa
                 </option>
@@ -48,17 +48,6 @@
     </div>
 
     <div id="container">
-        <!-- <div class="inner-container">
-            <div class="flags">
-                <img class="flag" src="https://upload.wikimedia.org/wikipedia/en/thumb/b/ba/Flag_of_Germany.svg/255px-Flag_of_Germany.svg.png" alt="">
-            </div>
-            <div class="sub-container">
-                <p class="texts" class="country-name">Germany</p>
-                <p class="texts" class="population">Population: 81,770.900</p>
-                <p class="texts" class="region">Region: Europe</p>
-                <p class="texts" class="capital">Capital:Berlin</p>
-            </div>
-        </div> -->
     </div>
     
 </body>
