--- a/index.html
+++ b/index.html
@@ -15,11 +15,7 @@
             <h1 class="headerLeft-heading">Where in the world</h1>
         </div>
         <div class="headerRight">
-            <img
-                src="moon.svg"
-                alt="moon"
-                class="headerRight-icon"
-            />
+            <img src="moon.svg" alt="moon" class="headerRight-icon"/>
             <h3 class="headerRight-heading">Dark Mode</h3>
         </div>
     </header>
